re PR fortran/85983 (ICE in check_dtio_interface1, at fortran/interface.c:4748)

2018-06-23  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/85983
	* interface.c (check_dtio_interface1): Delete assert.

From-SVN: r261994